segunda rama commit

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <footer>
 
-<p>derechos reservados Gabriel Carrsdsanza 1</p>
+<p>derechos reservados Gabriel Carrsdsanzawewew 1</p>
 
     </footer>
 
