primer commit trabajo final2

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link active" aria-current="page" href="#"><img src="./assets/chevallier-logo.png" class="logo_nav" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Link</a>
@@ -68,7 +68,7 @@
             </div>
         </section>
         <div class="div__separador"></div>
-        <section class="fondo2">
+        <section class="fondoDos">
             <div class="div__blur">
                 <h2>Empresa Argentina</h2>
             </div>
@@ -76,7 +76,7 @@
         <div class="div__separador">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus nulla natus soluta eius asperiores, dolorum repellat ipsum debitis optio magni similique deserunt sint? Culpa obcaecati voluptate unde dolores cupiditate necessitatibus?</p>
         </div>
-        <section class="fondo3">
+        <section class="fondoTres">
             <div class="div__blur">
                 <h2>Urquiza</h2>
             </div>
