agregue el carrusel y lo hice mas responsive

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                 <h3>Ofertisimas</h3>
                 <p>En estas vacaciones viaja con nosotros a los mejores destinos de toda la argentina al mejor precio</p>
             </div>
+            <DIv><H2>HOLA</H2></DIv>
             </div>
             </section>
         </main>
