agregue mas configuraciones 1.00v

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <nav class="navbar bg-light fixed-top col-12">
+        <nav class="navbar fixed-top col-12 nav__color">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Lujan Bus</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -95,7 +95,7 @@
                 
             </div>
         </section>
-        <section>
+        <section class="section">
             <div class="carruselIndex">
 
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
@@ -128,9 +128,7 @@
 
                 <h3>Ofertisimas</h3>
                 <p>En estas vacaciones viaja con nosotros a los mejores destinos de toda la argentina al mejor precio</p>
-            </div>
-            <DIv><H2>HOLA</H2></DIv>
-            </div>
+           </div>
             </section>
         </main>
 
