agregue fuentes y una imagen de pago 1.02

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Rubik+Glitch&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Monda:wght@400;700&family=Paytone+One&family=Press+Start+2P&family=Rubik+Glitch&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <meta charset="UTF-8">
@@ -93,7 +92,6 @@
 
             <div class="div__blur">
                 <h2 class="h2__urquiza">Urquiza</h2>
-
             </div>
         </section>
         <section class="section__tres">
@@ -138,7 +136,14 @@
                     <h3>Ofertisimas</h3>
                     <p>En estas vacaciones viaja con nosotros a los mejores destinos de toda la argentina al mejor
                         precio</p>
+                    <img src="./assets/pago/BANNERS_CHE-05-1.jpg" alt="" class="pagoimg">
                 </div>
+
+
+            </div>
+
+
+
         </section>
     </main>
 
