--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
 
     </header>
     <main>
+        <section>
+            <div>
+                <h1>VACACIONES</h1>
+            </div>
+        </section>
         <section class="fondoUno ">
             <div class="div__blur">
                 <div class="conteiner">
