section tres fitcover 1.12

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <section class="section__tres">
             <div class="carruselIndex">
 
-                <div id="carouselExampleIndicators carrusel__Tamaño" class="carousel slide" data-bs-ride="true">
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                             class="active" aria-current="true" aria-label="Slide 1"></button>
