section tres efecto neon a todo 1.13

--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
         <section class="section__hero">
             <div>
                 <h1 class="section__titulo ">VACACIONES</h1>
-                <p>En este verano disfruta de las mejores vaciones junto a <strong>Urquiza , Chevallier y Empresa
+                <p class="section__parrafo">En este verano disfruta de las mejores vaciones junto a <strong>Urquiza ,
+                        Chevallier y Empresa
                         Argentina</strong></p>
-                <p class=" section__hero--iconos d-flex justify-content-evenly"><i class="fa-solid fa-wheelchair-move"></i><i
-                        class="fa-solid fa-person-walking-luggage"></i><i class="fa-solid fa-mountain-city"></i></p>
+                <p class=" section__hero--iconos d-flex justify-content-evenly">
+                    <i class="fa-solid fa-person-walking-luggage"></i>
+                    <i class="fa-solid fa-bus-simple"></i>
+                    <i class="fa-solid fa-mountain-city"></i></p>
 
             </div>
         </section>
