--- a/Empresas/chevallier.html
+++ b/Empresas/chevallier.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,11 +18,13 @@
     <link rel="stylesheet" href="../fontawesome-free-6.1.1-web/fontawesome-free-6.1.1-web/css/all.css">
     <link rel="stylesheet" href="../estilos/estilo.css">
 </head>
+
 <body>
     <header>
         <nav class="navbar fixed-top col-12 nav__color">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../assets/nodo lujan.png" alt="" class="logo__barra--nav"></a>
+                <a class="navbar-brand" href="../index.html"><img src="../assets/nodo lujan.png" alt=""
+                        class="logo__barra--nav"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -65,17 +68,15 @@
 
     </header>
     <main>
-        
-        <section>
-            <h1>CHEVALLIER</h1>
-
-        </section>
 
 
+<section class="section__chevallier">
+    <h1 class="section__chevallier--titulo animate__animated animate__infinite animate__pulse">CHEVALLIER</h1>
+</section>
 
 
 
-
+</main>
 
 
 
@@ -86,40 +87,40 @@
 
 
 
-<footer>
-        <div class="footer">
-            <div>
-                <h5>Empresas De Transporte Lujan</h5>
-                <p>Ingresa a todas nuestras redes sociales</p>
-                <div class="iconos__footer">
-                    <a href=""><span class="fab fa-facebook-f"></span></a>
-                    <a href=""><span class="fab fa-twitter"></span></a>
-                    <a href=""><span class="fab fa-instagram"></span></a>
-                    <a href=""><span class="fab fa-youtube"></span></a>
-                    <a href=""><span class="fab fa-tiktok"></span></a>
+        <footer>
+            <div class="footer">
+                <div>
+                    <h5>Empresas De Transporte Lujan</h5>
+                    <p>Ingresa a todas nuestras redes sociales</p>
+                    <div class="iconos__footer">
+                        <a href=""><span class="fab fa-facebook-f"></span></a>
+                        <a href=""><span class="fab fa-twitter"></span></a>
+                        <a href=""><span class="fab fa-instagram"></span></a>
+                        <a href=""><span class="fab fa-youtube"></span></a>
+                        <a href=""><span class="fab fa-tiktok"></span></a>
+                    </div>
+                </div>
+
+
+                <div>
+                    <h5>Contactanos</h5>
+                    <p>Direccion : Pedro del Lujan 2645</p>
+                    <p>Telefono :0800-nodo-lujan</p>
+                    <p>E-mail:gabrielraul16@gmail.com</p>
+
+                    <h5>Metodos de pago</h5>
+                    <div class="icons">
+                        <a href=""><span class="fab fa-cc-mastercard fa-2x"></span></a>
+                        <a href=""><span class="fab fa-cc-paypal fa-2x"></span></a>
+                        <a href=""><span class="fab fa-cc-stripe fa-2x"></span></a>
+                        <a href=""><span class="fab fa-cc-visa fa-2x"></span></a>
+                    </div>
                 </div>
             </div>
+        </footer>
 
 
-            <div>
-                <h5>Contactanos</h5>
-                <p>Direccion : Pedro del Lujan 2645</p>
-                <p>Telefono :0800-nodo-lujan</p>
-                <p>E-mail:gabrielraul16@gmail.com</p>
-
-                <h5>Metodos de pago</h5>
-                <div class="icons">
-                    <a href=""><span class="fab fa-cc-mastercard fa-2x"></span></a>
-                    <a href=""><span class="fab fa-cc-paypal fa-2x"></span></a>
-                    <a href=""><span class="fab fa-cc-stripe fa-2x"></span></a>
-                    <a href=""><span class="fab fa-cc-visa fa-2x"></span></a>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-
-</footer>
+        </footer>
 
 
 
@@ -162,12 +163,13 @@
 
 
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
-    </script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+        </script>
 </body>
+
 </html>
