--- a/Empresas/urquiza.html
+++ b/Empresas/urquiza.html
@@ -74,15 +74,15 @@
 
             <div class="animation_overflow">
 
-                <h1 class="section__urquiza--titulo animate__animated animate__infinite animate__pulse">Urquiza
+                <h1 class="section__urquiza--titulo animate__animated animate__infinite animate__pulse">URQUIZA
                 </h1>
                 <h2 class="section__urquiza--h2 animate__animated animate__infinite animate__pulse">Nuestra Hisotoria
                 </h2>
             </div>
 
-            <div class="section__div__chevallier">
+            <div>
 
-                <p class="section__chevallier__div--parrafo">
+                <p class="section__urquiza__div--parrafo">
                     El 26 de Abril de 1926, nacía la Empresa General Urquiza. A principios de aquella época contaba con una sola unidad de marca Broadway, “…era entonces el coche más largo y moderno”. Poseía 37 asientos y realizaba el trayecto urbano que unía los barrios de Mataderos y Alberdi de la ciudad de Rosario.
 
                     A principios de los años 30 se destaca el cambio de los caminos urbanos por las rutas de la Provincia de Santa Fe. Se obtiene la concesión para la prestación del servicio entre las ciudades de Rosario y la localidad de Tortugas y a su vez se incluye la línea Rosario, Cañada de Gómez, Las Rosas, Carlos Pellegrini y El Trébol hasta el límite de la Provincia de Córdoba.
