--- a/Empresas/chevallier.html
+++ b/Empresas/chevallier.html
@@ -77,7 +77,7 @@
                 </h2>
             </div>
 
-            <div class="section__div__chevallier">
+            <div>
 
                 <p class="section__chevallier__div--parrafo">
                     El 05 de junio de 1935 el ingeniero Wilfred León Chevallier Boutell y su socio Enrique Ruscovi
