secciones casi listas 1.23

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LUJAN BUS</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./fontawesome-free-6.1.1-web/fontawesome-free-6.1.1-web/css/all.css">
@@ -42,11 +42,11 @@
                                         src="./assets/chevallier-logo.png" class="logo_nav" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#"><img
+                                <a class="nav-link active" aria-current="page" href="./Empresas/empresaarg.html"><img
                                         src="./assets/empresaargentina-logo.png" class="logo_nav" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#"><img
+                                <a class="nav-link active" aria-current="page" href="./Empresas/urquiza.html"><img
                                         src="./assets/2urquiza-logo.png" class="logo_nav" alt=""></a>
                             </li>
                             <li class="nav-item">
