secciones casi listas 1.24

--- a/Empresas/empresaarg.html
+++ b/Empresas/empresaarg.html
@@ -39,22 +39,20 @@
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                            
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./empresaarg.html"><img
-                                        src="../assets/empresaargentina-logo.png" class="logo_nav" alt=""></a>
+                                <a class="nav-link active" aria-current="page" href="../Empresas/chevallier.html"><img
+                                        src="../assets/chevallier-logo.png" class="logo_nav" alt=""></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="./urquiza.html"><img
                                         src="../assets/2urquiza-logo.png" class="logo_nav" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link active" aria-current="page" href="./Empresas/formulario.html"><img
+                                        src="./assets/contacto.png" alt="" class="logo_nav"></a>
                             </li>
 
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
+                      
                     </div>
                 </div>
             </div>
