--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-       <nav class="navbar fixed-top col-12 nav__color">
+        <nav class="navbar fixed-top col-12 nav__color">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="./assets/nodo lujan.png" alt="" class="logo__barra--nav"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -32,37 +32,38 @@
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                     aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Navegacion</h5>
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">NUESTRAS EMPRESAS</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="./Empresas/chevallier.html"><img
-                                        src="./assets/chevallier-logo.png" class="logo_nav" alt=""></a>
+                                        src="./assets/chevallier-logo.png" class="logo_nav"
+                                        alt="imagen logo chevallier"></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="./Empresas/empresaarg.html"><img
-                                        src="./assets/empresaargentina-logo.png" class="logo_nav" alt=""></a>
+                                        src="./assets/empresaargentina-logo.png" class="logo_nav"
+                                        alt="imagen logo empresaarg"></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="./Empresas/urquiza.html"><img
-                                        src="./assets/2urquiza-logo.png" class="logo_nav" alt=""></a>
+                                        src="./assets/2urquiza-logo.png" class="logo_nav" alt="imagen logo urquiza"></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link active" aria-current="page" href="./Empresas/formulario.html"><img
+                                        src="./assets/contacto.png" alt="" class="logo_nav"></a>
                             </li>
 
+
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
+                    
                     </div>
                 </div>
             </div>
         </nav>
- 
+
     </header>
     <main>
         <section class="section__hero">
@@ -87,7 +88,8 @@
                         <div class="card destinos" style="width: 18rem;">
                             <figure>
 
-                                <img src="./assets/Bariloche.png" class="card-img-top" alt="...">
+                                <img src="./assets/Bariloche.png" class="card-img-top"
+                                    alt="imagen de paisaje Bariloche">
                                 <div class="card-body">
                                     <p class="card-text d-flex justify-content-center">Bariloche</p>
                                 </div>
@@ -96,7 +98,8 @@
                         <div class="card destinos" style="width: 18rem;">
                             <figure>
 
-                                <img src="./assets/buenos-aires-2.jpg" class="card-img-top" alt="...">
+                                <img src="./assets/buenos-aires-2.jpg" class="card-img-top"
+                                    alt="imagen paisaje buenos Aires">
                                 <div class="card-body">
                                     <p class="card-text d-flex justify-content-center">Buenos Aires</p>
                                 </div>
@@ -106,7 +109,7 @@
                         <div class="card  destinos" style="width: 18rem;">
                             <figure>
 
-                                <img src="./assets/carlos-paz.jpg" class="card-img-top" alt="...">
+                                <img src="./assets/carlos-paz.jpg" class="card-img-top" alt="imagen paisaje carlos Paz">
                                 <div class="card-body">
                                     <p class="card-text d-flex justify-content-center ">Villa Carlos Paz</p>
                                 </div>
@@ -139,7 +142,7 @@
                         <div class="card destinos" style="width: 18rem;">
                             <figure>
 
-                                <img src="./assets/MDQ.png" class="card-img-top" alt="...">
+                                <img src="./assets/MDQ.png" class="card-img-top" alt="imagen paisaje mar del plata">
                                 <div class="card-body">
                                     <p class="card-text d-flex justify-content-center">Mar del plata</p>
                                 </div>
@@ -164,7 +167,7 @@
                         <div class="card destinos " style="width: 18rem;">
                             <figure>
 
-                                <img src="./assets/La-rioja.jpg" class="card-img-top" alt="...">
+                                <img src="./assets/La-rioja.jpg" class="card-img-top" alt="imagen paisaje la rioja">
 
                                 <div class="card-body">
                                     <p class="card-text d-flex justify-content-center">La rioja</p>
@@ -174,7 +177,8 @@
                         <div class="card destinos" style="width: 18rem;">
                             <figure>
 
-                                <img src="./assets/buenos-aires-2.jpg" class="card-img-top" alt="...">
+                                <img src="./assets/buenos-aires-2.jpg" class="card-img-top"
+                                    alt=" imagen paisaje buenos aires">
                                 <div class="card-body">
                                     <p class="card-text d-flex justify-content-center">Buenos Aires</p>
                                 </div>
@@ -183,7 +187,7 @@
                         <div class="card destinos" style="width: 18rem;">
                             <figure>
 
-                                <img src="./assets/rosario-1.jpg" class="card-img-top" alt="...">
+                                <img src="./assets/rosario-1.jpg" class="card-img-top" alt="imagen paisaje rosario">
                                 <div class="card-body">
                                     <p class="card-text d-flex justify-content-center">Rosario</p>
 
@@ -212,15 +216,15 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img src="./assets/Carrusel Chevallier/banner-CHE-corregido0.jpg" class="d-block w-100"
-                                alt="...">
+                                alt="promocion">
                         </div>
                         <div class="carousel-item">
                             <img src="./assets/Carrusel Chevallier/Banner_web_700x250.jpg" class="d-block w-100"
-                                alt="...">
+                                alt="promocion">
                         </div>
                         <div class="carousel-item">
                             <img src="./assets/Carrusel Chevallier/bannerArtboard-1-100.jpg" class="d-block w-100"
-                                alt="...">
+                                alt="promocion">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
