--- a/Empresas/urquiza.html
+++ b/Empresas/urquiza.html
@@ -42,22 +42,16 @@
                                         src="../assets/chevallier-logo.png" class="logo_nav" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#"><img
+                                <a class="nav-link active" aria-current="page" href="./empresaarg.html"><img
                                         src="../assets/empresaargentina-logo.png" class="logo_nav" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#"><img
-                                        src="../assets/2urquiza-logo.png" class="logo_nav" alt=""></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link active" aria-current="page" href="../Empresas/formulario.html"><img
+                                        src="../assets/contacto.png" alt="" class="logo_nav"></a>
                             </li>
 
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
+                        
                     </div>
                 </div>
             </div>
