trabajando en el formulario 1.25

--- a/Empresas/empresaarg.html
+++ b/Empresas/empresaarg.html
@@ -47,8 +47,8 @@
                                         src="../assets/2urquiza-logo.png" class="logo_nav" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./Empresas/formulario.html"><img
-                                        src="./assets/contacto.png" alt="" class="logo_nav"></a>
+                                <a class="nav-link active" aria-current="page" href="../Empresas/formulario.html"><img
+                                        src="../assets/contacto.png" alt="" class="logo_nav"></a>
                             </li>
 
                         </ul>
