--- a/Empresas/chevallier.html
+++ b/Empresas/chevallier.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                           
+
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="./empresaarg.html"><img
                                         src="../assets/empresaargentina-logo.png" class="logo_nav" alt=""></a>
@@ -47,11 +47,11 @@
                                         src="../assets/2urquiza-logo.png" class="logo_nav" alt=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./Empresas/formulario.html"><img
-                                        src="./assets/contacto.png" alt="" class="logo_nav"></a>
+                                <a class="nav-link active" aria-current="page" href="../Empresas/formulario.html"><img
+                                        src="../assets/contacto.png" alt="" class="logo_nav"></a>
                             </li>
                         </ul>
-                     
+
                     </div>
                 </div>
             </div>
