dia de entrega 1.31

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="chevallier , empresa argentina , urquiza , vaciones , Bariloche , mar del plata  , buenos aires , cordoba , capilla del monte , rosario">
+    <meta name="description" content="pagina de transporte de las empresas del nodo lujan con destinos a todo el paisaje">
     <title>LUJAN BUS</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
