--- a/Empresas/chevallier.html
+++ b/Empresas/chevallier.html
@@ -13,6 +13,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="chevallier , historia , micros , larga Distancia">
+    <meta name="description" content="historia de la empresa de transporte chevallier">
     <title>Chevallier</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
