dia de entrega 1.33

--- a/Empresas/formulario.html
+++ b/Empresas/formulario.html
@@ -109,8 +109,8 @@
                         <label for="fechaHora">Fecha y hora</label>
                         <input type="datetime-local" id="fechaHora" name="fechaHora">
                     </div>
-                    <input type="submit">
-                    <input type="reset">
+                    <input class="btn-formulario" type="submit">
+                    <input class="btn-formulario" type="reset">
                 </form>
 
 
