dia de entrega 1.34

--- a/Empresas/empresaarg.html
+++ b/Empresas/empresaarg.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                           
+
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="../Empresas/chevallier.html"><img
                                         src="../assets/chevallier-logo.png" class="logo_nav" alt=""></a>
@@ -55,7 +55,7 @@
                             </li>
 
                         </ul>
-                      
+
                     </div>
                 </div>
             </div>
@@ -81,11 +81,17 @@
             <div>
 
                 <p class="section__empArg__div--parrafo">
-                    En sus inicios, en los años 40, Empresa Argentina unió el trayecto entre plaza Santa Rosa de la ciudad de Rosario y Villa Diego, Santa Fe. Posteriormente, amplió su recorrido hasta la ciudad de San Lorenzo.
-                    Fue en noviembre de 1943, cuando inició un largo camino… Rosario – Mar del Plata. Este trayecto le permitió ser parte de miles
+                    En sus inicios, en los años 40, Empresa Argentina unió el trayecto entre plaza Santa Rosa de la
+                    ciudad de Rosario y Villa Diego, Santa Fe. Posteriormente, amplió su recorrido hasta la ciudad de
+                    San Lorenzo.
+                    Fue en noviembre de 1943, cuando inició un largo camino… Rosario – Mar del Plata. Este trayecto le
+                    permitió ser parte de miles
                     de historias, historias que fueron creando su propia identidad.
-                    Con ardua labor se ofrecieron servicios quincenales que, poco a poco, fueron diagramándose diariamente para satisfacer la creciente demanda de sus fieles clientes. Día a día se fue construyendo la empresa… su empresa, nutriéndose del reconocimiento y la confianza.
-                    Hoy podemos reafirmar que nuestro éxito se basa en que usted se sienta seguro, seguro de que en nosotros siempre podrá confiar.</p>
+                    Con ardua labor se ofrecieron servicios quincenales que, poco a poco, fueron diagramándose
+                    diariamente para satisfacer la creciente demanda de sus fieles clientes. Día a día se fue
+                    construyendo la empresa… su empresa, nutriéndose del reconocimiento y la confianza.
+                    Hoy podemos reafirmar que nuestro éxito se basa en que usted se sienta seguro, seguro de que en
+                    nosotros siempre podrá confiar.</p>
 
             </div>
 
